[workspace]

members = [
  "contract-bindings",
  "contracts/rust",
  "example-l2",
  "gen-bindings",
  "hermez-adaptor",
  "sequencer",
  "utils",
  "zkevm",
]

[patch."https://github.com/EspressoSystems/hotshot"]
hotshot = { git = "https:///github.com//EspressoSystems/hotshot", branch = "fix/parent-commitment" }
hotshot-centralized-server = { git = "https:///github.com//EspressoSystems/hotshot", branch = "fix/parent-commitment" }
hotshot-testing = { git = "https:///github.com//EspressoSystems/hotshot", branch = "fix/parent-commitment" }
hotshot-types = { git = "https:///github.com//EspressoSystems/hotshot", branch = "fix/parent-commitment" }
